# rusty-musician

./: .gitmodules  Cargo.toml
src/: README  get_lyrics.py  main.rs
src/rust-bert/utils/: download-dependencies_bart.py
