[package]
name = "rusty-musician"
version = "0.1.0"
authors = ["niticon <niticon@uw.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.13.2"
quote = "1.0"
proc-macro2 = "1.0"
libc = "0.2.71"
unicode-xid = "0.2"
rustversion = "1.0"
trybuild = "1.0.19"
parking_lot = "0.11.0"
inline-python = "0.6.0"

